[package]
name = "rust-wasm-kintone"
version = "0.1.0"
authors = ["uchan-nos <uchan0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-cli = "0.2"
js-sys = "0.3"
image = "0.23"
